--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
         <module>lesson12</module>
         <module>lesson13</module>
         <module>lesson14</module>
+        <module>lesson15</module>
+        <module>lesson16</module>
+        <module>lesson17</module>
     </modules>
 
     <properties>
