--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
         <module>lesson15</module>
         <module>lesson16</module>
         <module>lesson17</module>
+        <module>lesson18</module>
+        <module>lesson19</module>
+        <module>lesson20</module>
     </modules>
 
     <properties>
