--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
         <module>lesson18</module>
         <module>lesson19</module>
         <module>lesson20</module>
+        <module>lesson11/get-start</module>
+        <module>lesson11/simple-advisor</module>
+        <module>lesson11/advanced-advisor</module>
     </modules>
 
     <properties>
