--- a/lesson11/advanced-advisor/pom.xml
+++ b/lesson11/advanced-advisor/pom.xml
@@ -7,9 +7,10 @@
         <groupId>org.example</groupId>
         <artifactId>springai-study</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>lesson11</artifactId>
+    <artifactId>advanced-advisor</artifactId>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
@@ -17,4 +18,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-zhipuai</artifactId>
+        </dependency>
+        <!-- 引入rag插件 使用spring ai的rag模块-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-rag</artifactId>
+        </dependency>
+    </dependencies>
 </project>
