--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>lesson11/simple-advisor</module>
         <module>lesson11/advanced-advisor</module>
         <module>lesson21</module>
+        <module>lesson22</module>
     </modules>
 
     <properties>
