--- a/lesson16/huggingface/pom.xml
+++ b/lesson16/huggingface/pom.xml
@@ -7,13 +7,26 @@
         <groupId>org.example</groupId>
         <artifactId>springai-study</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>lesson16</artifactId>
+    <artifactId>huggingface</artifactId>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-huggingface</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
