--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,22 @@
         <module>lesson10/sse-server</module>
         <module>lesson10/sse-client</module>
         <module>lesson11</module>
+        <module>lesson11/get-start</module>
+        <module>lesson11/simple-advisor</module>
+        <module>lesson11/advanced-advisor</module>
         <module>lesson12</module>
         <module>lesson13</module>
         <module>lesson14</module>
         <module>lesson15</module>
+        <module>lesson15/simple-demo</module>
+        <module>lesson15/manual-demo</module>
         <module>lesson16</module>
+        <module>lesson16/ollama</module>
+        <module>lesson16/huggingface</module>
         <module>lesson17</module>
         <module>lesson18</module>
         <module>lesson19</module>
         <module>lesson20</module>
-        <module>lesson11/get-start</module>
-        <module>lesson11/simple-advisor</module>
-        <module>lesson11/advanced-advisor</module>
         <module>lesson21</module>
         <module>lesson22</module>
     </modules>
